complete the exercise

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div class="grid hidden">
                 <!-- <div class="square active">1</div> -->
             </div>
+            <h2 id="result-text" class="hidden"></h2>
         </div>
         <div class="footer-container">
             <h4>Make with &hearts; by Antonio Locorotondo</h4>
